# judge-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.dev.yaml  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  release.yml  version.yml
judge/: __main__.py
tests/: test_nothing.py
