[tool.poetry]
name = "judge-backend"
version = "0.1.0"
description = ""
authors = ["Kirill Gashkov <kirill@gashkov.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
