[tool.poetry]
name = "judge-backend"
version = "0.1.0"
description = ""
authors = ["Kirill Gashkov <kirill@gashkov.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
mypy = "^0.950"
pytest = "^7.1.2"

[tool.isort]
profile = "black"
known_first_party = ["judge"]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
